--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,25 @@
 #############################
+qicseek - v0.4
+
+* Updating the index with new index
+* Syncing scripts
+
+-- Sivabalan Thirunavukkarasu - Mar 13, 2014 - 14:58
+#############################
+qicseek - v0.3
+
+* Updated UI
+* Added search rank type select option
+
+-- Sivabalan Thirunavukkarasu - Mar 13, 2014 - 14:58
+#############################
+qicseek - v0.2
+
+* Cleaning up index
+* Adding pre-built scripts for anchorText, pageRank, indexBuilder
+
+-- Rohan Achar - Mar 13, 2014 - 14:30
+#############################
 qicseek - v0.1
 
 * Improved auto suggestion
@@ -13,18 +34,4 @@ qicseek - v0.1
 * Server.py: Added code to serve PNG images
 
 -- Sivabalan Thirunavukkarasu - Mar 13, 2014 - 05:43
-#############################
-qicseek - v0.2
-
-* Cleaning up index
-* Adding pre-built scripts for anchorText, pageRank, indexBuilder
-
--- Rohan Achar - Mar 13, 2014 - 14:30
-#############################
-qicseek - v0.3
-
-* Updated UI
-* Added search rank type select option
-
--- Sivabalan Thirunavukkarasu - Mar 13, 2014 - 14:58
 #############################
