NDCG added. Search Metrics and results animation added.

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -27,7 +27,7 @@ qicseek - v0.1
 	* Partial matches improved
 * Ranking type can be sent via AJAX request 
 	* Current Default: Cosine similarity 
-* DocFetcher.py: Fixed order of urllist (changed from dict to list of dicts)
+* DocFetcher.py: Fixed order of resultsList (changed from dict to list of dicts)
 * DocFetcher.py: Added Cosine similarity functions
 * DocFetcher.py: Union of documents taken to allow for partial matches
 * Improved UI
