UI fixes for Firefox

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,11 @@
 #############################
+qicseek - v0.8
+
+* Fixes for Firefox browser
+
+-- Sivabalan Thirunavukkarasu - Mar 14, 2014 - 15:04
+
+#############################
 qicseek - v0.7
 
 * Replacing https with http in google results
