Updated UI for result snippets

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,11 @@
 #############################
+qicseek - v1.0
+
+* Updated UI for snippets
+
+-- Sivabalan Thirunavukkarasu - Mar 19, 2014 - 02:40
+
+#############################
 qicseek - v0.9
 
 * Updated formula for awesome NDCG
