Supporting snippets and titles

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,13 @@
 #############################
 qicseek - v1.0
 
+* Updated backend to support snippets and titles.
+
+-- Rohan Achar - Mar 19, 2014 - 10:00
+
+#############################
+qicseek - v1.0
+
 * Updated UI for snippets
 
 -- Sivabalan Thirunavukkarasu - Mar 19, 2014 - 02:40
