Added busy indicator

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,12 @@
 #############################
-qicseek - v1.0
+qicseek - v1.2
+
+* Added busy indicator
+
+-- Sivabalan Thirunavukkarasu - Mar 19, 2014 - 15:41
+
+#############################
+qicseek - v1.1
 
 * full support for snippets, ironed out all bugs.
 
